hw/1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v1
  labels:
    app: hello-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
      version: v1
  template:
    metadata:
      labels:
        app: hello-app
        version: v1
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
