hw/2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v2
  labels:
    app: hello-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
      version: v2
  template:
    metadata:
      labels:
        app: hello-app
        version: v2
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
