hw/4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v2
  labels:
    app: echoserver
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
      version: v2
  template:
    metadata:
      labels:
        app: echoserver
        version: v2
    spec:
      containers:
      - name: echoserver
        image: us.gcr.io/k8s-artifacts-prod/echoserver:1.10
        ports:
        - containerPort: 8080
