hw/svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v1-service
spec:
  type: NodePort
  selector:
    app: hello-app
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 32752
