hw/svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v2-service
spec:
  type: NodePort
  selector:
    app: hello-app
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30479
