hw/svc3.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-v1-service
spec:
  type: NodePort
  selector:
    app: echoserver
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30834
