hw/svc4.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-v2-service
spec:
  type: NodePort
  selector:
    app: echoserver
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31776
